apps/terminus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terminus
  labels:
    app.kubernetes.io/name: terminus
