apps/terminus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminus
  namespace: terminus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: terminus
    app.kubernetes.io/component: web
  ports:
    - port: 2300
      targetPort: 2300
      protocol: TCP
