apps/terminus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terminus-ingress
  namespace: terminus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  rules:
    - host: trmnl.coultonf.com
      http:
        paths:
          - backend:
              service:
                name: terminus
                port:
                  number: 2300
            path: /
            pathType: Prefix
